--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,9 +1,10 @@
 {
   "app": {
-    "name_short": "RR",
+    "name_short": "R(RE)",
     "name": "RESSOURCES RELATIONNELLES",
     "loading": "Chargement...",
     "no_results": "Aucun résultat",
+    "no_response": "Il y a eu un problème avec la réponse du serveur veuillez réessayer",
     "see_more": "Voir plus",
     "showing": "Affichage de {end} sur {total} résultats"
   },
