--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -29,7 +29,7 @@
   },
   "home": {
     "page": "Accueil",
-    "title": "Bienvenue sur mon site"
+    "title": "Bienvenue sur le site des Ressources (Re)lationnelles"
   },
   "users": {
     "page": "Utilisateurs",
