--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -36,8 +36,11 @@
     "title": "Connexion",
     "username": "Identification",
     "username_placeholder": "Votre nom d'utilisateur ou votre adresse email",
+    "username_required": "Votre nom d'utilisateur ou votre adresse email est requis",
     "password": "Mot de passe",
     "password_placeholder": "Votre mot de passe",
+    "password_required": "Votre mot de passe est requis",
+    "password_pattern": "Votre mot de passe doit contenir au moins 6 caractères dont au moins une lettre minuscule, une lettre majuscule, un chiffre et un caractère spécial",
     "remember_me": "Se souvenir de moi",
     "forgot_password": "Mot de passe oublié ?",
     "register": "Pas encore inscrit ?",
