auth todo but login and logout basics done

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,6 +47,12 @@
     "submit": "Se connecter",
     "success": "Vous vous êtes connecté avec succès"
   },
+  "logout": {
+    "page": "Déconnexion",
+    "title": "Déconnexion",
+    "submit": "Se déconnecter",
+    "success": "Vous vous êtes déconnecté avec succès"
+  },
   "users": {
     "page": "Utilisateurs",
     "title": "Liste des utilisateurs",
