--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,31 +1,10 @@
 {
   "app": {
+    "name": "Ressources (Re)lationnelles",
     "name_short": "R(RE)",
-    "name": "RESSOURCES RELATIONNELLES",
-    "loading": "Chargement...",
     "no_results": "Aucun résultat",
     "no_response": "Il y a eu un problème avec la réponse du serveur veuillez réessayer",
-    "see_more": "Voir plus",
-    "showing": "Affichage de {end} sur {total} résultats",
-    "filter": "Filtrer",
-    "filters": {
-      "reset": "Réinitialiser les filtres"
-    },
-    "search": "Rechercher",
-    "yes": "Oui",
-    "no": "Non",
-    "limit": "Limite",
-    "sort": "Trier",
-    "sorts": {
-      "id": "ID",
-      "created_at": "Date de création",
-      "updated_at": "Date de mise à jour"
-    },
-    "direction": "Direction",
-    "directions": {
-      "asc": "Ascendant",
-      "desc": "Descendant"
-    }
+    "loading": "Chargement..."
   },
   "home": {
     "page": "Accueil",
@@ -33,56 +12,23 @@
   },
   "login": {
     "page": "Connexion",
-    "title": "Connexion",
-    "username": "Identification",
-    "username_placeholder": "Votre nom d'utilisateur ou votre adresse email",
-    "username_required": "Votre nom d'utilisateur ou votre adresse email est requis",
-    "password": "Mot de passe",
-    "password_placeholder": "Votre mot de passe",
-    "password_required": "Votre mot de passe est requis",
-    "password_pattern": "Votre mot de passe doit contenir au moins 6 caractères dont au moins une lettre minuscule, une lettre majuscule, un chiffre et un caractère spécial",
+    "title": "Connexion à votre compte",
     "remember_me": "Se souvenir de moi",
     "forgot_password": "Mot de passe oublié ?",
     "register": "Pas encore inscrit ?",
     "submit": "Se connecter",
     "success": "Vous vous êtes connecté avec succès"
   },
-  "logout": {
-    "page": "Déconnexion",
-    "title": "Déconnexion",
-    "submit": "Se déconnecter",
-    "success": "Vous vous êtes déconnecté avec succès"
-  },
-  "users": {
-    "page": "Utilisateurs",
-    "title": "Liste des utilisateurs",
-    "certified": "Certifié",
-    "role": "Rôle",
-    "roles": {
-      "user": "Utilisateur",
-      "moderator": "Modérateur",
-      "admin": "Administrateur",
-      "super_admin": "Super administrateur"
-    },
-    "state": "Département",
-    "gender": "Sexe",
-    "genders": {
-      "male": "Masculin",
-      "female": "Féminin",
-      "other": "Autre"
-    },
-    "sorts": {
-      "username": "Nom d'utilisateur",
-      "first_name": "Prénom",
-      "last_name": "Nom"
-    }
-  },
-  "about": {
-    "page": "À propos",
-    "title": "À propos du site des Ressources (Re)lationnelles"
+  "user": {
+    "username": "Nom d'utilisateur",
+    "username_placeholder": "Votre nom d'utilisateur",
+    "username_required": "Veuillez entrer votre nom d'utilisateur",
+    "password": "Mot de passe",
+    "password_placeholder": "Votre mot de passe",
+    "password_required": "Veuillez entrer votre mot de passe"
   },
   "footer": {
-    "copyright": "© {year} Mon site"
+    "copyright": "© {year} Ressources (Re)lationnelles"
   },
   "toast": {
     "success": "Succès",
