--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -17,7 +17,15 @@
     "forgot_password": "Mot de passe oublié ?",
     "register": "Pas encore inscrit ?",
     "submit": "Se connecter",
-    "success": "Vous vous êtes connecté avec succès"
+    "success": "Vous vous êtes connecté avec succès",
+    "error": "Vous êtes déjà connecté"
+  },
+  "logout": {
+    "page": "Déconnexion",
+    "title": "Déconnexion de votre compte",
+    "submit": "Se déconnecter",
+    "success": "Vous vous êtes déconnecté avec succès",
+    "error": "Vous n'êtes pas connecté"
   },
   "user": {
     "username": "Nom d'utilisateur",
