--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -70,9 +70,12 @@
     "first_name_placeholder": "Votre prénom",
     "last_name": "Nom",
     "last_name_placeholder": "Votre nom",
+    "old_password": "Ancien mot de passe",
+    "old_password_placeholder": "Votre ancien mot de passe",
     "password": "Mot de passe",
     "password_placeholder": "Votre mot de passe",
     "password_required": "Veuillez entrer votre mot de passe",
+    "password_length": "Votre mot de passe doit faire au moins 6 caractères",
     "password_confirmation": "Confirmation du mot de passe",
     "password_confirmation_placeholder": "Confirmez votre mot de passe",
     "password_confirmation_required": "Veuillez confirmer votre mot de passe",
