--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -169,6 +169,18 @@
     "filter": "Filtrer les profils",
     "no_results": "Aucun profil n'a été trouvé"
   },
+  "resource": {
+    "page": "Ressource",
+    "title": "Ressource : {title}",
+    "actions": "Actions",
+    "edit": "Modifier la ressource",
+    "edit_title": "Modifier la ressource : {title}",
+    "edit_media": "Modifier le média de la ressource",
+    "edit_media_title": "Modifier le média de la ressource : {title}",
+    "delete": "Supprimer la ressource",
+    "delete_title": "Supprimer la ressource : {title}",
+    "delete_confirmation": "Êtes-vous sûr de vouloir supprimer cette ressource ? Toutes les données associées seront perdues. Cette action est irréversible."
+  },
   "resources": {
     "page": "Ressources",
     "title": "Les ressources",
