--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -141,7 +141,8 @@
     "verify_email_title": "Vérifier email de {username}",
     "delete": "Supprimer compte",
     "delete_title": "Supprimer compte de {username}",
-    "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible."
+    "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible.",
+    "resources_title": "Ressources de {username}"
   },
   "profiles": {
     "page": "Profils",
