--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -142,6 +142,7 @@
     "delete": "Supprimer compte",
     "delete_title": "Supprimer compte de {username}",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible.",
+    "resources_of_title": "Ressources de {username}",
     "resources_title": "Ressources",
     "resources_likeby_title": "Ressources aimées",
     "resources_sharedby_title": "Ressources partagées",
